# steam-vent

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
crypto/: Cargo.toml  build.rs
crypto/src/: lib.rs
examples/: auth_ticket.rs  backpack.rs  chat.rs  custom_transport.rs  login.rs  product_info.rs  test.rs  web_cookie.rs
protobuf/: Cargo.toml  README.md  build.rs  build.sh
protobuf-build/: Cargo.toml
protobuf-build/src/: main.rs
protobuf/common/: Cargo.toml
protobuf/common/src/: lib.rs
protobuf/csgo/: Cargo.toml
protobuf/dota2/: Cargo.toml
protobuf/src/: clientmetrics.rs  content_manifest.rs  encrypted_app_ticket.rs  enums.rs  enums_clientserver.rs  htmlmessages.rs  lib.rs  steamdatagram_messages_auth.rs  steamdatagram_messages_sdr.rs  steammessages_accounthardware_steamclient.rs  steammessages_appoverview.rs  steammessages_auth_steamclient.rs  steammessages_base.rs  steammessages_broadcast_steamclient.rs  steammessages_chat_steamclient.rs  steammessages_clientlanp2p.rs  steammessages_clientmetrics_steamclient.rs  steammessages_clientserver.rs  steammessages_clientserver_2.rs  steammessages_clientserver_friends.rs  steammessages_clientserver_login.rs  steammessages_cloud_steamclient.rs  steammessages_contentsystem_steamclient.rs  steammessages_credentials_steamclient.rs  steammessages_datapublisher_steamclient.rs  steammessages_depotbuilder_steamclient.rs  steammessages_deviceauth_steamclient.rs  steammessages_econ_steamclient.rs  steammessages_friendmessages_steamclient.rs  steammessages_gamenetworking_steamclient.rs  steammessages_gamenotifications_steamclient.rs  steammessages_gameservers_steamclient.rs  steammessages_hiddevices.rs  steammessages_inventory_steamclient.rs  steammessages_linkfilter_steamclient.rs  steammessages_lobbymatchmaking_steamclient.rs  steammessages_market_steamclient.rs  steammessages_offline_steamclient.rs  steammessages_parental_steamclient.rs  steammessages_parties_steamclient.rs  (+27 more)
protobuf/steam/: Cargo.toml
protobuf/steam/protos/: steammessages_gameservers.steamclient.proto
protobuf/steam/src/: lib.rs
protobuf/tf2/: Cargo.toml
protobuf/tf2/src/: lib.rs
src/: auth.rs  connection.rs  eresult.rs  game_coordinator.rs  lib.rs  message.rs  net.rs  serverlist.rs  service_method.rs  session.rs
src/auth/: confirmation.rs  guard_data.rs  guarddata.rs  mod.rs
src/connection/: auto_reconnect.rs  filter.rs  mod.rs  raw.rs  unauthenticated.rs
src/transport/: mod.rs  tcp.rs  websocket.rs
tools/: wireshard-steam.lua
tools/protobufs/: protos.proto
