[package]
name = "steam-vent"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"

[dependencies]
steam-vent-proto = { version = "0.2", path = "./protobuf" }
steam-vent-crypto = { version = "0.2", path = "./crypto" }
tokio = { version = "1.29.1", features = ["net", "io-util"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = { version = "0.19.0", features = ["rustls"] }
binread = "2.2.0"
binwrite = "0.2.1"
thiserror = "1.0.43"
bytes = "1.4.0"
protobuf = "=3.2.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
crc = "3.0.1"
byteorder = "1.4.3"
flate2 = "1.0.26"
steamid-ng = "1.0.0"
futures-sink = "0.3.28"
futures-util = { version = "0.3.28", features = ["sink"] }
dashmap = "5.5.0"
tracing = "0.1.37"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
rsa = "0.9.2"
num-traits = "0.2.16"
num-bigint-dig = "0.8.4"
base64 = "0.21.2"
num_enum = "0.6.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3.17"

[workspace]