[package]
name = "steam-vent"
version = "0.3.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"
description = "Interact with the Steam network via rust"
license = "MIT"
repository = "https://github.com/icewind1991/steam-vent"
rust-version = "1.75.0"

[dependencies]
steam-vent-proto = { version = "0.5", path = "./protobuf" }
steam-vent-crypto = { version = "0.2", path = "./crypto" }
tokio = { version = "1.39.3", features = ["net", "io-util", "macros"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-webpki-roots"] }
rustls = "0.23.12"
webpki-roots = "0.26.3"
binread = "2.2.0"
binwrite = "0.2.1"
thiserror = "1.0.63"
bytes = "1.7.1"
protobuf = "=3.5.1"
bytemuck = { version = "1.17.0", features = ["derive"] }
crc = "3.2.1"
byteorder = "1.5.0"
flate2 = "1.0.32"
steamid-ng = "1.0.0"
futures-util = { version = "0.3.30", features = ["sink"] }
dashmap = "6.0.1"
tracing = "0.1.40"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
rsa = "0.9.6"
num-traits = "0.2.19"
num-bigint-dig = "0.8.4"
base64 = "0.22.1"
num_enum = "0.7.3"
directories = "5.0.1"
another-steam-totp = "0.3.3"
async-stream = "0.3.5"

[dev-dependencies]
tokio = { version = "1.39", features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"

[workspace]
exclude = ["protobuf/build"]

[features]
tf2 = ["steam-vent-proto/tf2"]
csgo = ["steam-vent-proto/csgo"]
dota2 = ["steam-vent-proto/dota2"]

[[example]]
name = "backpack"
required-features = ["tf2"]
