[package]
name = "steam-vent-crypto"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
license = "MIT"

[dependencies]
rand = "0.8"
rsa = "0.4"
once_cell = "1"
aes = "0.7"
thiserror = "1"
block-modes = "0.8"
sha-1 = "0.9"
hmac = "0.11"

[dev-dependencies]
steam-vent = { version = "0.1", path = ".." }

[build-dependencies]
base64 = "0.13"