[package]
name = "steam-vent-crypto"
version = "0.2.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
description = "Rust implementation of Steam crypto"
edition = "2018"
license = "MIT"
repository = "https://github.com/icewind1991/steam-vent"

[dependencies]
rand = "0.8"
rsa = "0.4"
once_cell = "1"
aes = "0.7"
thiserror = "1"
block-modes = "0.8"
sha-1 = "0.9"
hmac = "0.11"
bytes = "1"
pin-project-lite = { version = "0.2", optional = true }
tokio-stream = { version = "0.1", optional = true }
futures-sink = { version = "0.3", optional = true }

[features]
stream = ["pin-project-lite", "tokio-stream", "futures-sink"]

[build-dependencies]
base64 = "0.13"