[package]
name = "steam-vent-crypto"
version = "0.2.1"
authors = ["Robin Appelman <robin@icewind.nl>"]
description = "Rust implementation of Steam crypto"
edition = "2018"
license = "MIT"
repository = "https://github.com/icewind1991/steam-vent"

[dependencies]
rand = "0.8"
rsa = "0.9.6"
once_cell = "1"
aes = "0.8.4"
thiserror = "1"
cbc = "0.1.2"
sha-1 = "0.10.1"
hmac = "0.12.1"
bytes = "1.7.1"

[build-dependencies]
rsa = { version = "0.9.6", features = ["pem"] }
