[package]
name = "steam-vent-proto-dota2"
version = "0.5.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
license = "MIT"
repository = "https://github.com/icewind1991/steam-vent"

[dependencies]
steam-vent-proto-common = { version = "0.5.0", path = "../common" }